Add GET /transfers for getting info for money transfer
